# slsl

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: rust-ci.yml
benches/: bench_array_vec.rs  bench_binary.rs  bench_cat_stack.rs  bench_containers.rs  bench_contiguous.rs  bench_creation.rs  bench_gemm.rs  bench_get_scalar.rs  bench_iter.rs  bench_iter_dim.rs  bench_mean.rs  bench_min_max.rs  bench_ndarray_arc_iter.rs  bench_norm.rs  bench_par_iter.rs  bench_permute.rs  bench_slice.rs  bench_softmax.rs  bench_standardize.rs  bench_sum.rs  bench_tensor_creation.rs  bench_to_dtype.rs  bench_to_vec_series.rs  bench_unary.rs  bench_uninit_vec.rs
examples/: basics.rs  mean_demo.rs  norm_demo.rs  norm_performance_demo.rs  slice_demo.rs  softmax_demo.rs  squeeze_demo.rs  stack_cat_demo.rs  sub_demo.rs  sum_reduce_demo.rs  tensor_iter_demo.rs  to_vec_demo.rs  unsqueeze_demo.rs
src/: lib.rs  main.rs
src/backend/: accelerate.rs  fallback.rs  impl.rs  macro.rs  mkl.rs  mod.rs  openblas.rs  simd.rs
src/binary/: add.rs  div.rs  mod.rs  mul.rs  sub.rs
src/core/: arrayn.rs  creation.rs  dim_iter.rs  dims.rs  dtype.rs  fmt.rs  iter.rs  mod.rs  shape.rs  shared.rs  storage.rs  tensor_elem.rs  tensorbase.rs  to_dtype.rs  to_vec.rs
src/linalg/: dot.rs  matmul.rs  mod.rs  norm.rs
src/ops/: broadcast.rs  cat.rs  flatten.rs  mod.rs  normalize.rs  permute.rs  reshape.rs  split.rs  squeeze.rs  stack.rs  standardize.rs  tile.rs
src/reduce/: argmax.rs  argmin.rs  argmin_argmax.rs  max.rs  max_argmax.rs  mean.rs  min.rs  min_argmin.rs  min_max.rs  min_max_argmin_argmax.rs  mod.rs  sum.rs
src/slice/: elem.rs  macro.rs  mod.rs
src/unary/: abs.rs  ceil.rs  clamp.rs  cos.rs  exp.rs  floor.rs  log.rs  mod.rs  neg.rs  recip.rs  relu.rs  round.rs  sigmoid.rs  sin.rs  softmax.rs  sqr.rs  sqrt.rs  tan.rs  tanh.rs
tests/: norm_tests.rs  softmax_tests.rs
