[package]
name = "slsl"
version = "0.0.6"
rust-version = "1.82"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/jamjamjon/slsl"
authors = ["Jamjamjon <xxyydzml@outlook.com>"]
description = "Experimental CPU tensor library with multi-DType support, leveraging SIMD, multithreading, and BLAS-style acceleration."
exclude = ["examples/*", "benches/*", "tests/*"]

[features]
default = []
rayon = ["dep:rayon"]
accelerate = ["dep:accelerate-src"]
mkl = ["dep:intel-mkl-src"]
openblas = ["dep:openblas-src"]

[dependencies]
anyhow = "1.0"
num-traits = "0.2.19"
gemm = "0.18.2"
num_cpus = "1.16"
simsimd = "6.5.3"
wide = "0.7.28"
paste = "1.0.15"
half = { version = "2.6.0", features = ["bytemuck", "num-traits"] }
rand = { version = "0.9.2", features = ["small_rng"] }
rand_distr = "0.5.1"
rayon = { version = "1.10", optional = true }
accelerate-src = { version = "0.3.2", optional = true }
intel-mkl-src = { version = "0.8", optional = true, features = ["mkl-dynamic-lp64-iomp"] }
openblas-src = { version = "0.10.12", optional = true, features = ["system"] }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
ndarray = { version = "0.16", features = ["rayon"] }
candle-core = { version = "0.9" }
candle-nn = { version = "0.9" }
base64ct = "=1.7.3"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false

[[bench]]
name = "bench_unary"
harness = false

[[bench]]
name = "bench_min_max"
harness = false

[[bench]]
name = "bench_get_scalar"
harness = false

[[bench]]
name = "bench_slice"
harness = false

[[bench]]
name = "bench_iter_dim"
harness = false
required-features = ["rayon"]

[[bench]]
name = "bench_to_vec_series"
harness = false

[[bench]]
name = "bench_creation"
harness = false

[[bench]]
name = "bench_permute"
harness = false

[[bench]]
name = "bench_contiguous"
harness = false

[[bench]]
name = "bench_to_dtype"
harness = false

[[bench]]
name = "bench_sum"
harness = false

[[bench]]
name = "bench_softmax"
harness = false

[[bench]]
name = "bench_gemm"
harness = false

[[bench]]
name = "bench_binary"
harness = false

[[bench]]
name = "bench_cat_stack"
harness = false

[[bench]]
name = "bench_standardize"
harness = false

[[bench]]
name = "bench_iter"
harness = false